--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -28,6 +28,7 @@ $code-font: $text-font;
 $text-size: 12pt;
 $text-glow: 4px; /*multiplied for links*/
 
+$breakpoint: 52em;
 $total-width: 88vw;
 $navmenu-width: 18ch;
 /*#{this} is called interpolation - why is it necessary?*/
